# holochain-time-index

./: .gitignore  Cargo.toml  README.md  flake.nix  time-chunking.dna.workdir.dna
src/: bfs.rs  convertions.rs  dfs.rs  entries.rs  errors.rs  impl_utils.rs  impls.rs  lib.rs  methods.rs  search.rs  traits.rs  utils.rs  validation.rs
src/dfs/: methods.rs  mod.rs
tests/: Cargo.toml  default.nix  index.ts  package-lock.json  package.json  run-tests.sh
tests/dna/workdir/: dna.yaml
tests/dna/zomes/test_zome/: Cargo.toml
tests/dna/zomes/test_zome_integrity/: Cargo.toml
tests/dna/zomes/test_zome_integrity/src/: lib.rs
tests/test_dna/: Cargo.toml  default.nix  holochain_version.nix
tests/test_dna/nix/: sources.json
tests/test_dna/tests/: .hc  index.ts  package-lock.json  package.json
tests/test_dna/workdir/: dna.yaml
tests/test_dna/zomes/test_zome/: Cargo.toml
tests/test_dna/zomes/test_zome/src/: lib.rs  utils.rs
tests/test_dna/zomes/test_zome_integrity/: Cargo.toml
tests/test_dna/zomes/test_zome_integrity/src/: lib.rs
tests/test_zome/: Cargo.toml  default.nix
tests/test_zome/src/: lib.rs
tests/test_zome/tests/: index.ts  package-lock.json  package.json  tsconfig.json
tests/test_zome/time-index.dna.workdir/: dna.json
tests/test_zome/workdir/: dna.yaml  time-index-test.dna
tests/tests/: index.ts  package-lock.json  package.json
tests/workdir/: happ.yaml
time-chunking.dna.workdir/: dna.json  dna.yaml
zomes/index/: Cargo.toml
zomes/index/src/: impls.rs  lib.rs  methods.rs  utils.rs
