[package]
name = "hc_time_index"
version = "0.1.0"
authors = ["jdeepee <joshuadparkin@gmail.com>"]
edition = "2018"
exclude = ["tests/*", "time-chunking.dna.workdir/*", "time-chunking.dna.gz", ".gitignore"]

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_time_index"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[dependencies]
hdk = "0.0.138"
holochain_deterministic_integrity = "0.0.10"

#derive_more = "0"
serde = "1"
lazy_static = "*"
chrono = "0.4"
mut_static = "*"
permutation = "0.2.5"
thiserror = "1.0.24"
petgraph = "0.6"
