[package]
name = "hc_time_index"
version = "0.2.0"
authors = ["jdeepee <joshuadparkin@gmail.com>"]
edition = "2018"
exclude = ["tests/*", "time-chunking.dna.workdir/*", "time-chunking.dna.gz", ".gitignore"]

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_time_index"

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[dependencies]
hdi = "0.1.10"
hdk = "0.0.163"

#derive_more = "0"
serde = "1"
lazy_static = "*"
chrono = { version = "0.4.22", default-features = false, features = ["clock", "std", "oldtime", "serde"] }
mut_static = "*"
permutation = "0.2.5"
thiserror = "1.0.24"
petgraph = "0.6"
