[package]
name = "testing_zome"
version = "0.1.0"
authors = ["jdeepee <joshuadparkin@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
name = "testing_zome"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[dependencies]
hdk3 = { git = "https://github.com/holochain/holochain.git", rev = "fd8049a" }

#derive_more = "0"
serde = "1"
lazy_static = "*"
chrono = { version = "0.4", features = ["serde"] }
mut_static = "*"
hc_time_index = { path = "../../" }