[package]
name = "testing_zome"
version = "0.1.0"
authors = ["jdeepee <joshuadparkin@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
name = "testing_zome"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[dependencies]
hdk = "0.0.101-alpha.0"

#derive_more = "0"
serde = "*"
lazy_static = "*"
chrono = { version = "0.4", features = ["serde"] }
mut_static = "*"
hc_time_index = { path = "../../" }

[patch.crates-io]
hdk = { git = "https://github.com/holochain/holochain", rev="1ff2cc2935e6a2bfbb95aef5f2860eb09b467b49", package="hdk"}
holo_hash = { git = "https://github.com/holochain/holochain", rev="1ff2cc2935e6a2bfbb95aef5f2860eb09b467b49", package="holo_hash"}