[package]
name = "time_delimited_indexing"
version = "0.1.0"
authors = ["jdeepee <joshuadparkin@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
name = "time_delimited_indexing"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[patch.crates-io]
hc_utils = { git = "https://github.com/holochain/hc-utils", branch = "develop", package = "hc_utils" }
hdk3 = { git = "https://github.com/holochain/holochain", rev = "3675b58", package = "hdk3" }
holo_hash = { git = "https://github.com/holochain/holochain", rev = "3675b58", package = "holo_hash" }

[dependencies]
hdk3 = "0"
holo_hash = "0"

#derive_more = "0"
serde = "1"
lazy_static = "1.4.0"
chrono = "0.4"