[package]
name = "time_delimited_indexing"
version = "0.1.0"
authors = ["jdeepee <joshuadparkin@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
name = "time_delimited_indexing"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[patch.crates-io]
hc_utils = { git = "https://github.com/holochain/hc-utils", branch = "develop", package = "hc_utils" }

[dependencies]
hdk = "0.0.100-alpha.1"
holo_hash = "0.0.2-alpha.1"

#derive_more = "0"
serde = "1"
lazy_static = "1.4.0"
chrono = "0.4"