[package]
name = "test_zome"
version = "0.1.0"
authors = ["jdeepee <joshuadparkin@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
name = "test_zome"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[dependencies]
hdk = "0.1.2"

#derive_more = "0"
serde = "*"
lazy_static = "*"
chrono = { version = "0.4.22", default-features = false, features = ["clock", "std", "oldtime", "serde"] }
mut_static = "*"
hc_time_index = { path = "../../../../" }
test_zome_integrity = { path = "../test_zome_integrity" }